--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 # Base image
 FROM guacamole/guacamole
-
+USER root
 # install apache web server
 RUN apt-get update && apt-get install -y apache2 && rm -rf /var/lib/apt/lists/*
 
@@ -12,4 +12,4 @@ RUN mkdir -p /root/.mozilla/firefox/default-profile && \
 echo 'user_pref("browser.startup.homepage", "http://localhost");' >> /root/.mozilla/firefox/default-profile/prefs.js
 
 # Start apache and guacamole at boot
-CMD service apache2 start && /op/guacamole/bin/start.sh
+CMD ["sh", "-c", "service apache2 start && /opt/guacamole/bin/start.sh"]
