--- a/webui/Dockerfile
+++ b/webui/Dockerfile
@@ -1,11 +1,14 @@
-FROM node:20-alpine AS build
+# Build React App
+FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:latest AS production
+# Serve React App with Nginx
+FROM nginx:stable-alpine AS production
+WORKDIR /usr/share/nginx/html
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 CMD [ "nginx", "-g", "daemon off;" ]
