--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,11 @@ services:
     container_name: backend
     ports:
       - "5000:5000"
+    environment:
+      - PORT=5000
+      - JWT_SECRET=sd9en£2tm94m!£83mwp@0e9km4mf924mfl
+      - LOGIN=admin
+      - PASSWORD=Password1
     networks:
       - cloudwerte-network
 
